--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@types/nodemailer": "^6.4.7",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -32,6 +33,7 @@
     "mongoose": "^6.8.0",
     "nanoid": "^3.3.4",
     "node-modules": "^0.0.1",
+    "nodemailer": "^6.8.0",
     "npm-watch": "^0.11.0",
     "watch": "^1.0.2"
   },
